# ThermalPowerPlant-Modeling

./: Codebase_Explanation.md  Meta System Modelling-2.pptx  Project_Presentation.md  README.md  pyproject.toml  requirements.txt
config/: simulation_config.py
dashboard/: app.py
sim_out/sim_run_2025-11-06_22-52_720h/: KPIs.json  reliability.json
sim_out/sim_run_2025-11-07_10-43_720h/: KPIs.json  assumptions.json  reliability.json
sim_out/sim_run_2025-11-07_10-44_2880h/: KPIs.json  assumptions.json  reliability.json
src/: __init__.py  economic_models.py  reliability_models.py  simulation_core.py
src/analytics/: __init__.py  enhancements.py
src/plotting/: executive_summary.py  plant_components.py
src/utils/: __init__.py  io.py  math_tools.py
